--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,3 +38,85 @@ ul.select2-choices {
     font-weight: normal;
     font-size:13px;
 }
+
+
+section#messages {
+    max-height:300px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin-bottom: 50px;
+}
+section#messages div {
+    max-width: 500px;
+    word-wrap: break-word;
+    margin-bottom: 20px;
+    line-height: 24px;
+}
+
+.clear {
+    clear: both;
+}
+
+.from-me-user {
+    float: right;
+    margin-left: 14px;
+    margin-right: 20px;
+}
+.from-me {
+    position: relative;
+    padding: 5px 20px;
+    color: white;
+    float: right;
+    background: #0B93F6;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
+    margin-right: 20px;
+}
+
+.from-me:after
+{
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 7px 0 7px 7px;
+    border-color: transparent #0B93F6;
+    display: block;
+    width: 0;
+    z-index: 1;
+    right: -7px;
+    top: 6px;
+}
+
+.from-them-user {
+    float: left;
+    margin-right: 14px;
+}
+.from-them {
+    position: relative;
+    padding: 5px 20px;
+    color: black;
+    float: left;
+    background: #EEEDED;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
+}
+
+.from-them:after
+{
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 7px 7px 7px 0;
+    border-color: transparent #EEEDED;
+    display: block;
+    width: 0;
+    z-index: 1;
+    left: -7px;
+    top: 6px;
+}
+
+section#messages p {
+    margin:0 !important;
+}
